--- a/index.html
+++ b/index.html
@@ -17,14 +17,11 @@
         </div>
         <div class="container">
             <div class="wrap">
-                <img src="belgium.jpg" class="flag"/>
-                <h3>Belgium</h3>
+                <img class="flag"/>
+                <label for="country-name">country name</label>
+                <input  type="text" id="country-name" name="country-name"/>
             </div>
-            <div class="info-container">
-                <p>Belgium is situated at <span class="location"></span>, it has a population of <span class="population"></span> people</p>
-                <p>The capital is <span class="capital"></span> and you can pay with <span class="valuta"></span></p>
-                <p>They speak <span class="language"></span></p>
-            </div>
+            <div class="info-container"></div>
         </div>
 
     </article>
